Fixed some Makefile bugs and updated log system
- New 'catchManager.sh' script that creates log only for failed tests
- Added ship module as a second example

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,7 @@ INC:= -I$(INCDIR)
 # -------------------------------------------------------------
 # Files
 
-BIN:= Car
+BIN:= Vehicles
 SRC:= $(wildcard $(SRCDIR)/*.cpp)
 OBJ:= $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SRC))
 
